HW17/E-6.4.4-SimulatePunchCard/wdir_msg/compile.err

TOY.java:155: error: cannot find symbol
                    String bin=Integer.toBinary(mem[255]);
                                      ^
  symbol:   method toBinary(int)
  location: class Integer
1 error


